<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="spotify_streamer">This button will launch my Spotify Streamer app!</string>
    <string name="scores_app">This button will launch my scores app!</string>
    <string name="library_app">This button will launch my library app!</string>
    <string name="build_it_bigger">This button will launch my build it bigger app!</string>
    <string name="xyz_reader">This button will launch my XYZ reader app!</string>
    <string name="capstone">This button will launch my capstone app!</string>
    
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="str_btn_capstone">Capstone: My Own App</string>
    <string name="str_btn_xyz_reader">XYZ Reader</string>
    <string name="str_btn_builditbigger">Build IT Bigger</string>
    <string name="str_btn_libraryapp">Library App</string>
    <string name="str_btn_scoresapp">Scores App</string>
    <string name="str_btn_spotifystreamer">Spotify Streamer</string>
    <string name="str_txt_appname">My Nanodegree Apps!</string>
</resources>
